--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -24,15 +24,31 @@ html{
 }
 
 canvas{
-  display:block;
+  display:inline-block;
   vertical-align:bottom;
 }
 
 #particles-js{
+  position: absolute;
   width: 100%;
   height: 100%;
   background-color: #222222;
   background-size: cover;
   background-position: 50% 50%;
+  box-sizing: border-box;
+}
+
+#particles-js:after {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-size: cover;
+  background-position: center top;
   background-repeat: no-repeat;
+}
+
+.navbar {
+  position: relative;
+  color: #ffffff;
 }
