--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -23,11 +23,6 @@ html{
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-canvas{
-  display:inline-block;
-  vertical-align:bottom;
-}
-
 #particles-js{
   position: absolute;
   width: 100%;
@@ -61,4 +56,30 @@ canvas{
   text-indent: -9999em;
   background-image: url('hew.png');
   color: white;
+}
+
+.layout {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.header {
+  position: relative;
+  min-height: 600px;
+  background-size: cover;
+  background-position: center top;
+  background-repeat: no-repeat;
+}
+
+.jumbotron {
+  height: 100%;
+}
+
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 1170px;
 }
