--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -23,8 +23,11 @@ html{
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+* {
+  font-family: 'Open Sans';
+}
+
 #particles-js{
-  position: absolute;
   width: 100%;
   height: 100%;
   background-color: #222222;
@@ -33,53 +36,106 @@ html{
   box-sizing: border-box;
 }
 
-#particles-js:after {
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-size: cover;
-  background-position: center top;
-  background-repeat: no-repeat;
-}
-
-.navbar {
-  position: relative;
-  color: #ffffff;
-}
-
-.logo a{
-  width: auto;
-  height: auto;
-  max-height: 300px;
-  max-width: 300px;
-  text-indent: -9999em;
-  background-image: url('hew.png');
-  color: white;
-}
-
-.layout {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-
-.header {
-  position: relative;
-  min-height: 600px;
-  background-size: cover;
-  background-position: center top;
-  background-repeat: no-repeat;
-}
-
-.jumbotron {
-  height: 100%;
+body {
+  background: transparent;
 }
 
 .container {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  width: 1170px;
+  color: white;
+  background-color: transparent;
+}
+
+.container-fluid>.navbar-collapse, .container-fluid>.navbar-header, .container>.navbar-collapse,.container>.navbar-header {
+  padding-bottom: 20px;
+}
+.navbar-header a {
+  font-family: 'Bungee Outline';
+  text-decoration: none;
+  color: white;
+  font-size: 40px;
+}
+
+.navbar-header a:hover {
+  border-bottom: 2px solid transparent;
+  border-bottom-color: #fff
+}
+canvas{
+  display:block;
+  vertical-align:bottom;
+}
+
+.navbar-right {
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: white;
+  vertical-align: middle;
+}
+.navbar-right a:hover {
+  background-color: #222;
+  border-bottom: 2px solid transparent;
+  border-bottom-color: #fff
+}
+
+.navbar-right li {
+  margin-left: 130px;
+}
+
+.nav li a:focus {
+  background-color: #222;
+}
+
+.nav li a:hover {
+  background-color: #222;
+}
+
+.navbar-right a{
+  text-decoration: none;
+  color: white;
+}
+
+
+
+.hew {
+  margin-top: 120px;
+  font-family: 'Bungee Outline';
+  font-size: 140px;
+  background-color: transparent;
+}
+
+.row {
+  width: 100%;
+  max-width: 100%;
+  min-width: 768px;
+  margin: 0 auto;
+}
+
+.team-section {
+  background-color: #f5f5f5;
+}
+
+.team-header {
+  font-weight: 800;
+  font-size: 30px;
+}
+
+.profile {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+}
+
+.footer {
+  height: 150px;
+  background-color: #222;
+}
+.footer-info {
+  margin-top: 40px;
+  font-size: 40px;
+  font-family: 'Bungee Outline';
+  color: white;
+}
+
+.footer-links {
+  margin-top: 40px;
+  color: white;
 }
