(feat) Add styling for modal and modify styling for jumbotron

--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -185,3 +185,8 @@ form input {
   width: 64%;
   font-size: 23px;
 }
+
+/*removes outline of login button*/
+.nav li a:focus {
+  outline: none;
+}
