--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -54,6 +54,7 @@ body {
   height: 100%;
 }
 
+
 .container {
   position: relative;
   color: white;
@@ -124,8 +125,8 @@ canvas{
   margin: 0 auto;
 }
 
-.team-section {
-  background-color: #f5f5f5;
+#team-section {
+  padding-top: 40px;
 }
 
 .team-header {
@@ -228,4 +229,14 @@ form input {
 .transpose:hover {
   background-color: white;
   color: black;
+}
+
+.chart {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #d3d3d3;
+}
+
+.chartSvg {
+  background-color: white;
 }
