--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -28,7 +28,7 @@ html{
 }
 
 #particles-js{
-  z-index: -1;
+  z-index: 0;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -239,4 +239,9 @@ form input {
 
 .chartSvg {
   background-color: white;
+}
+
+.allData {
+  font-size: 30px;
+  font-weight: bold;
 }
