--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -226,9 +226,24 @@ form input {
   transition: background-color 0.5s ease-out;
 }
 
-.transpose:hover {
+.transpose:hover,  {
   background-color: white;
   color: black;
+}
+
+.series {
+  width: 100%;
+  height: 35px;
+  color: white;
+  border: none;
+  background-color: black;
+  transition: background-color 0.5s ease-out;
+}
+
+.series:hover {
+  background-color: white;
+  color: black;
+  border: 2px solid black;
 }
 
 .chart {
@@ -241,7 +256,19 @@ form input {
   background-color: white;
 }
 
-.allData {
+.allData, .graphType {
   font-size: 30px;
   font-weight: bold;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.bindings, .eachGraph {
+  display: inline-block;
+}
+
+select {
+  background: transparent;
+  background-color: black;
+  color: white;
 }
